# test1

./: db.sqlite3  manage.py  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
lets_simplejwt/: settings.py  urls.py  wsgi.py
