## pyproject.toml

[tool.poetry]
name = "lets-simplejwt"
version = "0.1.0"
description = ""
authors = ["hotbari <ghkahr01@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system][tool.poetry]
name = "jwt"
version = "0.1.0"
description = ""
authors = ["jingangkim <seeu4534@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"